lien de rapport

--- a/backlog/sous-tâche/1.init-rapport.12.md
+++ b/backlog/sous-tâche/1.init-rapport.12.md
@@ -2,7 +2,9 @@
 
 ## Travail à faire
 - Élaboration d'un rapport sans contenu avec les pages et leurs titres
+- ajouter le lien de rapport dans README.md et README.json
 
 ## Livrable
 - docs/rapport.md
 - docs/index.md
+- README.md
