--- a/backlog/sous-tâche/1.init-rapport.12.md
+++ b/backlog/sous-tâche/1.init-rapport.12.md
@@ -2,7 +2,11 @@
 
 ## Travail à faire
 - Élaboration d'un rapport sans contenu avec les pages et leurs titres
+- ajouter le lien de rapport dans README.md et README.json
+- ajouter le lien de présentation dans README.md et README.json
+
 
 ## Livrable
 - docs/rapport.md
 - docs/index.md
+- README.m
