lien de présentation

--- a/backlog/sous-tâche/2.init-présentation.13.md
+++ b/backlog/sous-tâche/2.init-présentation.13.md
@@ -1,7 +1,10 @@
 # Init-presentation
 ## Travail à faire
 Création d'une présentation sans contenu, mais avec les titres des diapositives
+- ajouter le lien de présentation dans README.md et README.json
+
 ## Livrable
 - docs/_layouts/présentation.html
 - docs/présentation.md
 - docs/index.md
+- README.md
