--- a/backlog/sous-tâche/2.init-présentation.13.md
+++ b/backlog/sous-tâche/2.init-présentation.13.md
@@ -4,6 +4,7 @@ Création d'une présentation sans contenu, mais avec les titres des diapositive
 - ajouter le lien de présentation dans README.md et README.json
 
 ## Livrable
+- backlog/sous-tâche/*
 - docs/_layouts/présentation.html
 - docs/présentation.md
 - docs/index.md
