--- a/backlog/sous-tâche/2.init-présentation.13.md
+++ b/backlog/sous-tâche/2.init-présentation.13.md
@@ -4,8 +4,8 @@ Création d'une présentation sans contenu, mais avec les titres des diapositive
 - ajouter le lien de présentation dans README.md et README.json
 
 ## Livrable
-- backlog/sous-tâche/*
-- docs/_layouts/présentation.html
-- docs/présentation.md
-- docs/index.md
+- backlog/sous-tâche/1.init-rapport.12.md
+- backlog/sous-tâche/2.init-presentation.13.md
+- docs/* 
 - README.md
+- README.json
