--- a/backlog/sous-tâche/1.init-rapport.12.md
+++ b/backlog/sous-tâche/1.init-rapport.12.md
@@ -2,11 +2,10 @@
 
 ## Travail à faire
 - Élaboration d'un rapport sans contenu avec les pages et leurs titres
--  ajouter le lien de rapport dans README.md et README.json
 
-  
 ## Livrable
 - backlog/sous-tâche/1.init-rapport.12.md
-- docs/*
-- REAME.md
-- REAME.json
+- docs/* : je vais modifier tous les fichier dans cette repertoire
+- docs/_layouts/default.html
+- Readme.json : je vais ajouter seleument le lien de rapport
+- Readme.md  : je vais ajouter seleument le lien de rapport
