--- a/backlog/feature/1.backlog.7.md
+++ b/backlog/feature/1.backlog.7.md
@@ -1,15 +1,15 @@
-# Backlog
+# Backlog 
 
 ## Travail à faire
 
 - Création de la liste des tâches
+- Validation avec le formateur
 - Création des issues
 - Changement les noms des fichier dans le dossier backlog :
     - Ordre.Titre_issue.Numero_issue.md
 - Les issues sont enregistrer dans des sous-dossiers qui représente des labels des issues
 
-
-## Livrable 
-
+## Livrable
+- docs/0.table-de-matiere/*
 - backlog/*
-- README.md
+- README.md je vais ajouter seleument les liens des issues
