--- a/backlog/feature/4.installation-dusk.20.md
+++ b/backlog/feature/4.installation-dusk.20.md
@@ -2,7 +2,9 @@
 
 ## Travail à faire
 
-instalation de dusk sur le projet lab laravel crud standard
+installer et configurer dusk sur le projet lab laravel crud standard
 
 ## Livrable
-- /app.
+- docs/installation-dusk/installation-dusk.md
+- docs/installation-dusk/images
+- /app./tests/browser/*
