--- a/backlog/feature/2.rapport.10.md
+++ b/backlog/feature/2.rapport.10.md
@@ -1,9 +1,12 @@
 # Rapport
 
-## Travail à faire
-
-Élaboration d'un rapport sans contenu avec les pages et leurs titres
-docs/rapport.md
+## Travail à faire 
+Réaliser le rapport de lab markdown en utilisant GitHub pages.
 
 ## Livrable
-- docs/rapport.md
+- docs/* : je vais modifier tous les fichier dans cette repertoire
+- docs/_layouts/rapport.html
+- rapport.md
+- index.md
+- Readme.json : je vais ajouter ou modifier seleument le lien de rapport
+- Readme.md  : je vais ajouter ou modifier seleument le lien de rapport
