--- a/backlog/feature/3.presentation.11.md
+++ b/backlog/feature/3.presentation.11.md
@@ -1,9 +1,12 @@
 # Présentation
 
-## Travail à faire
+## Travail à faire 
+Réaliser une présentation de besoin en utilisant GitHub pages.
 
-Création d'une présentation sans contenu, mais avec les titres des diapositives
-docs/présentation-data.md
-
-## Livrable
-- docs/présentation-data.md
+## Livrable 
+- docs/* : je vais modifier tous les fichier dans cette repertoire
+- docs/_layouts/presentation.html
+- presentation.md
+- index.md
+- Readme.json : je vais ajouter ou modifier seleument le lien de presentation
+- Readme.md  : je vais ajouter ou modifier seleument le lien de presentation
