--- a/backlog/feature/1.init-lab.12.md
+++ b/backlog/feature/1.init-lab.12.md
@@ -5,9 +5,8 @@
 - Élaboration d'un présentation sans contenu avec les pages et leurs titres
 
 ## Livrable
-- backlog/sous-tâche/1.init-lab.12.md
+- backlog/sous-tâche/1.init-rapport.12.md
 - docs/* : je vais modifier tous les fichier dans cette repertoire
 - docs/_layouts/default.html
-- docs/_layouts/presentation.html
 - Readme.json : je vais ajouter seleument le lien de rapport et présentation
 - Readme.md  : je vais ajouter seleument le lien de rapport et présentation
